[workspace]
members = [
  "contracts/address-provider",
  "contracts/incentives",
  "contracts/red-bank",
  "contracts/rewards-collector",
  "packages/chains/*",
  "packages/health",
  "packages/testing",
  "packages/types",
  "packages/utils",
  "integration-tests",
]

[workspace.package]
version = "1.0.1"
authors = [
  "Larry Engineer <larry@delphidigital.io>",
  "Piotr Babel <piotr@delphilabs.io>",
  "Spike Spiegel <spikeonmars@protonmail.com>",
  "Ahmad Kaouk",
  "Harry Scholes",
]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/mars-protocol/red-bank"
homepage = "https://marsprotocol.io"
documentation = "https://docs.marsprotocol.io/"
keywords = [
  "mars",
  "cosmos",
  "cosmwasm",
]

[workspace.dependencies]
anyhow = "1.0.68"
bech32 = "0.9.1"
cosmwasm-schema = "1.1.9"
cosmwasm-std = "1.1.9"
cw2 = { git = "https://github.com/mars-protocol/cw-plus", rev = "4014255" }
cw-it = { git = "https://github.com/apollodao/cw-it.git", rev = "8bf265a43113ff1f8f3a514a1e14b3ed7bce5fb4" }
cw-multi-test = "0.16.1"
cw-storage-plus = "1.0.1"
cw-utils = "1.0.1"
mars-owner = "1.0.0"
osmosis-std = "0.14.0"
prost = { version = "0.11.5", default-features = false, features = [
  "prost-derive",
] }
schemars = "0.8.11"
serde = { version = "1.0.152", default-features = false, features = [
  "derive",
] }
thiserror = "1.0.38"

# packages
mars-health         = { version = "1.0.0", path = "./packages/health" }
mars-osmosis        = { version = "1.0.0", path = "./packages/chains/osmosis" }
mars-red-bank-types = { version = "1.0.0", path = "./packages/types" }
mars-testing        = { version = "1.0.0", path = "./packages/testing" }
mars-utils          = { version = "1.0.0", path = "./packages/utils" }
mars-swapper        = { git = "https://github.com/mars-protocol/mars-common.git", rev = "1eb716e4393f135231c8d034668aa67c30e500f8" }

# contracts
mars-address-provider          = { version = "1.0.0", path = "./contracts/address-provider" }
mars-incentives                = { version = "1.0.0", path = "./contracts/incentives" }
mars-oracle-base               = { git = "https://github.com/mars-protocol/mars-common.git", rev = "1eb716e4393f135231c8d034668aa67c30e500f8" }
mars-oracle-osmosis            = { git = "https://github.com/mars-protocol/mars-common.git", rev = "1eb716e4393f135231c8d034668aa67c30e500f8" }
mars-red-bank                  = { version = "1.0.0", path = "./contracts/red-bank" }
mars-rewards-collector         = { version = "1.0.0", path = "./contracts/rewards-collector" }
mars-swapper-osmosis           = { version = "1.0.0", path = "../mars-common/contracts/swapper/osmosis" }
mars-swapper-base              = { version = "1.0.0", path = "../mars-common/contracts/swapper/base" }

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
overflow-checks  = true
opt-level        = 3
panic            = "abort"
rpath            = false
